# Conformers

./: README.md  pyproject.toml
conformer/: __init__.py  base.py  calibration.py  conform.py  fwer.py  sampling.py
conformer/components/: __init__.py  admission.py  fwer.py  gcf.py  rejection.py  shared.py
examples/: debug.py  paper_dm.py  risk_viz.py  simple.py  test.py
tests/: test_conformer.py
