[tool.poetry]
name = "conformer"
version = "0.1.0"
description = ""
authors = ["Bradley-Butcher <bradleydpbutcher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
torch = "^2.0.1"
transformers = "^4.30.2"
scipy = "^1.11.1"
loguru = "^0.7.0"
datasets = "^2.13.1"
sentencepiece = "^0.1.99"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
